--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.14",
+        "symfony/var-dumper": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "symfony/web-server-bundle": "4.4.5"
     },
     "config": {
         "preferred-install": {
